--- a/SeanRocket.conf
+++ b/SeanRocket.conf
@@ -8,18 +8,62 @@ update-url = https://git.io/JfI1q
 
 [Rule]
 DOMAIN-SUFFIX,bochk.com,DIRECT
-DOMAIN-SUFFIX,bnbstatic.com,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.info,德国I-标准 LIGHT
+
+DOMAIN-SUFFIX,binance.cc,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.charity,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.cloud,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.co,德国I-标准 LIGHT
 DOMAIN-SUFFIX,binance.com,德国I-标准 LIGHT
-DOMAIN-SUFFIX,n26.com,德国I-标准 LIGHT
-DOMAIN-SUFFIX,tech26.de,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.info,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.me,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.net,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.org,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.us,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.vision,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancecnt.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.be,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.biz,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.cc,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.co,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.info,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.ink,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.kim,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.link,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.live,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.mobi,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.net,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.pro,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.sh,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.top,德国I-标准 LIGHT
+# API
+DOMAIN-SUFFIX,binanceapi.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,bnbstatic.com,德国I-标准 LIGHT
+# SaaS
+DOMAIN-SUFFIX,saasexch.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,saasexch.io,德国I-标准 LIGHT
+DOMAIN-SUFFIX,appsflayer.com,德国I-标准 LIGHT
+
 DOMAIN-SUFFIX,bybit.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,bycsi.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,bytick.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,byapis.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,bycbe.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,bymj.io,德国I-标准 LIGHT
+DOMAIN-SUFFIX,byabcde.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,byapps.net,德国I-标准 LIGHT
 DOMAIN-SUFFIX,byd3c3.com,德国I-标准 LIGHT
 DOMAIN-SUFFIX,bybit.biz,德国I-标准 LIGHT
 DOMAIN-SUFFIX,bybdc6.com,德国I-标准 LIGHT
-DOMAIN-SUFFIX,byapps.net,德国I-标准 LIGHT
-DOMAIN-SUFFIX,byabcde.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,bybit-global.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,bybit.cloud,德国I-标准 LIGHT
+DOMAIN-SUFFIX,bybitglobal.com,德国I-标准 LIGHT
+
+DOMAIN-SUFFIX,n26.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,tech26.de,德国I-标准 LIGHT
+
 DOMAIN-SUFFIX,imap.gmail.com,BWG2024
+
 DOMAIN-KEYWORD,safepal,DIRECT
 #
 # 国内外划分，对中国网站直连，外国网站代理。
