--- a/SeanRocket.conf
+++ b/SeanRocket.conf
@@ -8,40 +8,46 @@ update-url = https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/ma
 [Rule]
 DOMAIN-SUFFIX,bochk.com,DIRECT
 
-DOMAIN-SUFFIX,binance.cc,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.charity,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.cloud,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.co,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.com,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.info,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.me,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.net,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.org,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.us,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.vision,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancecnt.com,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.be,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.biz,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.cc,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.co,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.com,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.info,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.ink,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.kim,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.link,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.live,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.mobi,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.net,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.pro,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.sh,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.top,德国I-标准 LIGHT
-# API
-DOMAIN-SUFFIX,binanceapi.com,德国I-标准 LIGHT
-DOMAIN-SUFFIX,bnbstatic.com,德国I-标准 LIGHT
-# SaaS
-DOMAIN-SUFFIX,saasexch.com,德国I-标准 LIGHT
-DOMAIN-SUFFIX,saasexch.io,德国I-标准 LIGHT
-DOMAIN-SUFFIX,appsflayer.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,appsflyersdk.com,香港03-原生 EXCLUSIVE  
+DOMAIN-SUFFIX,jpush.cn,香港03-原生 EXCLUSIVE  
+DOMAIN-SUFFIX,rwbkr.com,香港03-原生 EXCLUSIVE  
+DOMAIN-SUFFIX,victorysec.com.hk,香港03-原生 EXCLUSIVE
+
+DOMAIN-SUFFIX,kraken.com,香港03-原生 EXCLUSIVE
+DOMAIN-SUFFIX,kraken.onl,香港03-原生 EXCLUSIVE
+
+DOMAIN-SUFFIX,appsflayer.com,DIRECT  
+DOMAIN-SUFFIX,binance.cc,DIRECT  
+DOMAIN-SUFFIX,binance.charity,DIRECT  
+DOMAIN-SUFFIX,binance.cloud,DIRECT  
+DOMAIN-SUFFIX,binance.co,DIRECT  
+DOMAIN-SUFFIX,binance.com,DIRECT  
+DOMAIN-SUFFIX,binance.info,DIRECT  
+DOMAIN-SUFFIX,binance.me,DIRECT  
+DOMAIN-SUFFIX,binance.net,DIRECT  
+DOMAIN-SUFFIX,binance.org,DIRECT  
+DOMAIN-SUFFIX,binance.us,DIRECT  
+DOMAIN-SUFFIX,binance.vision,DIRECT  
+DOMAIN-SUFFIX,binanceapi.com,DIRECT  
+DOMAIN-SUFFIX,binancecnt.com,DIRECT  
+DOMAIN-SUFFIX,binancezh.be,DIRECT  
+DOMAIN-SUFFIX,binancezh.biz,DIRECT  
+DOMAIN-SUFFIX,binancezh.cc,DIRECT  
+DOMAIN-SUFFIX,binancezh.co,DIRECT  
+DOMAIN-SUFFIX,binancezh.com,DIRECT  
+DOMAIN-SUFFIX,binancezh.info,DIRECT  
+DOMAIN-SUFFIX,binancezh.ink,DIRECT  
+DOMAIN-SUFFIX,binancezh.kim,DIRECT  
+DOMAIN-SUFFIX,binancezh.link,DIRECT  
+DOMAIN-SUFFIX,binancezh.live,DIRECT  
+DOMAIN-SUFFIX,binancezh.mobi,DIRECT  
+DOMAIN-SUFFIX,binancezh.net,DIRECT  
+DOMAIN-SUFFIX,binancezh.pro,DIRECT  
+DOMAIN-SUFFIX,binancezh.sh,DIRECT  
+DOMAIN-SUFFIX,binancezh.top,DIRECT  
+DOMAIN-SUFFIX,bnbstatic.com,DIRECT  
+DOMAIN-SUFFIX,saasexch.com,DIRECT  
+DOMAIN-SUFFIX,saasexch.io,DIRECT  
 
 DOMAIN-SUFFIX,bybit.com,德国I-标准 LIGHT
 DOMAIN-SUFFIX,bycsi.com,德国I-标准 LIGHT
@@ -62,6 +68,13 @@ DOMAIN-SUFFIX,n26.com,德国I-标准 LIGHT
 DOMAIN-SUFFIX,tech26.de,德国I-标准 LIGHT
 
 DOMAIN-SUFFIX,imap.gmail.com,BWG2024
+
+DOMAIN-SUFFIX,okex.com,DIRECT  
+DOMAIN-SUFFIX,okx.com,DIRECT  
+DOMAIN-SUFFIX,okx-dns.com,DIRECT  
+DOMAIN-SUFFIX,okx-dns1.com,DIRECT  
+DOMAIN-SUFFIX,okx-dns2.com,DIRECT  
+DOMAIN-SUFFIX,oklink.com,DIRECT  
 
 DOMAIN-KEYWORD,safepal,DIRECT
 #
