--- a/SeanRocket.conf
+++ b/SeanRocket.conf
@@ -8,46 +8,46 @@ update-url = https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/ma
 [Rule]
 DOMAIN-SUFFIX,bochk.com,DIRECT
 
-DOMAIN-SUFFIX,appsflyersdk.com,香港03-原生 EXCLUSIVE  
-DOMAIN-SUFFIX,jpush.cn,香港03-原生 EXCLUSIVE  
-DOMAIN-SUFFIX,rwbkr.com,香港03-原生 EXCLUSIVE  
-DOMAIN-SUFFIX,victorysec.com.hk,香港03-原生 EXCLUSIVE
+DOMAIN-SUFFIX,appsflyersdk.com,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,jpush.cn,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,rwbkr.com,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,victorysec.com.hk,新加坡04 - 标准 EXCLUSIVE
 
-DOMAIN-SUFFIX,kraken.com,香港03-原生 EXCLUSIVE
-DOMAIN-SUFFIX,kraken.onl,香港03-原生 EXCLUSIVE
+DOMAIN-SUFFIX,kraken.com,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,kraken.onl,新加坡04 - 标准 EXCLUSIVE
 
-DOMAIN-SUFFIX,appsflayer.com,DIRECT  
-DOMAIN-SUFFIX,binance.cc,DIRECT  
-DOMAIN-SUFFIX,binance.charity,DIRECT  
-DOMAIN-SUFFIX,binance.cloud,DIRECT  
-DOMAIN-SUFFIX,binance.co,DIRECT  
-DOMAIN-SUFFIX,binance.com,DIRECT  
-DOMAIN-SUFFIX,binance.info,DIRECT  
-DOMAIN-SUFFIX,binance.me,DIRECT  
-DOMAIN-SUFFIX,binance.net,DIRECT  
-DOMAIN-SUFFIX,binance.org,DIRECT  
-DOMAIN-SUFFIX,binance.us,DIRECT  
-DOMAIN-SUFFIX,binance.vision,DIRECT  
-DOMAIN-SUFFIX,binanceapi.com,DIRECT  
-DOMAIN-SUFFIX,binancecnt.com,DIRECT  
-DOMAIN-SUFFIX,binancezh.be,DIRECT  
-DOMAIN-SUFFIX,binancezh.biz,DIRECT  
-DOMAIN-SUFFIX,binancezh.cc,DIRECT  
-DOMAIN-SUFFIX,binancezh.co,DIRECT  
-DOMAIN-SUFFIX,binancezh.com,DIRECT  
-DOMAIN-SUFFIX,binancezh.info,DIRECT  
-DOMAIN-SUFFIX,binancezh.ink,DIRECT  
-DOMAIN-SUFFIX,binancezh.kim,DIRECT  
-DOMAIN-SUFFIX,binancezh.link,DIRECT  
-DOMAIN-SUFFIX,binancezh.live,DIRECT  
-DOMAIN-SUFFIX,binancezh.mobi,DIRECT  
-DOMAIN-SUFFIX,binancezh.net,DIRECT  
-DOMAIN-SUFFIX,binancezh.pro,DIRECT  
-DOMAIN-SUFFIX,binancezh.sh,DIRECT  
-DOMAIN-SUFFIX,binancezh.top,DIRECT  
-DOMAIN-SUFFIX,bnbstatic.com,DIRECT  
-DOMAIN-SUFFIX,saasexch.com,DIRECT  
-DOMAIN-SUFFIX,saasexch.io,DIRECT  
+DOMAIN-SUFFIX,binance.cc,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binance.charity,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binance.cloud,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binance.co,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binance.com,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binance.info,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binance.me,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binance.net,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binance.org,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binance.us,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binance.vision,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binancecnt.com,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.be,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.biz,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.cc,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.co,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.com,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.info,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.ink,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.kim,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.link,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.live,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.mobi,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.net,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.pro,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.sh,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.top,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binanceapi.com,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,bnbstatic.com,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,saasexch.com,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,saasexch.io,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,appsflayer.com,新加坡04 - 标准 EXCLUSIVE
 
 DOMAIN-SUFFIX,bybit.com,德国I-标准 LIGHT
 DOMAIN-SUFFIX,bycsi.com,德国I-标准 LIGHT
@@ -64,17 +64,17 @@ DOMAIN-SUFFIX,bybit-global.com,德国I-标准 LIGHT
 DOMAIN-SUFFIX,bybit.cloud,德国I-标准 LIGHT
 DOMAIN-SUFFIX,bybitglobal.com,德国I-标准 LIGHT
 
+DOMAIN-SUFFIX,okex.com,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,okx.com,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,okx-dns.com,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,okx-dns1.com,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,okx-dns2.com,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,oklink.com,新加坡04 - 标准 EXCLUSIVE
+
 DOMAIN-SUFFIX,n26.com,德国I-标准 LIGHT
 DOMAIN-SUFFIX,tech26.de,德国I-标准 LIGHT
 
 DOMAIN-SUFFIX,imap.gmail.com,BWG2024
-
-DOMAIN-SUFFIX,okex.com,DIRECT  
-DOMAIN-SUFFIX,okx.com,DIRECT  
-DOMAIN-SUFFIX,okx-dns.com,DIRECT  
-DOMAIN-SUFFIX,okx-dns1.com,DIRECT  
-DOMAIN-SUFFIX,okx-dns2.com,DIRECT  
-DOMAIN-SUFFIX,oklink.com,DIRECT  
 
 DOMAIN-KEYWORD,safepal,DIRECT
 #
