--- a/SeanRocket.conf
+++ b/SeanRocket.conf
@@ -16,38 +16,38 @@ DOMAIN-SUFFIX,victorysec.com.hk,新加坡04 - 标准 EXCLUSIVE
 DOMAIN-SUFFIX,kraken.com,新加坡04 - 标准 EXCLUSIVE
 DOMAIN-SUFFIX,kraken.onl,新加坡04 - 标准 EXCLUSIVE
 
-DOMAIN-SUFFIX,binance.cc,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binance.charity,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binance.cloud,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binance.co,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binance.com,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binance.info,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binance.me,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binance.net,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binance.org,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binance.us,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binance.vision,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binancecnt.com,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.be,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.biz,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.cc,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.co,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.com,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.info,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.ink,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.kim,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.link,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.live,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.mobi,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.net,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.pro,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.sh,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.top,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,binanceapi.com,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,bnbstatic.com,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,saasexch.com,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,saasexch.io,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,appsflayer.com,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,binance.cc,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.charity,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.cloud,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.co,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.info,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.me,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.net,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.org,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.us,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.vision,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancecnt.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.be,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.biz,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.cc,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.co,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.info,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.ink,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.kim,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.link,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.live,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.mobi,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.net,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.pro,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.sh,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binancezh.top,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binanceapi.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,bnbstatic.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,saasexch.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,saasexch.io,德国I-标准 LIGHT
+DOMAIN-SUFFIX,appsflayer.com,德国I-标准 LIGHT
 
 DOMAIN-SUFFIX,bybit.com,德国I-标准 LIGHT
 DOMAIN-SUFFIX,bycsi.com,德国I-标准 LIGHT
