--- a/SeanRocket.conf
+++ b/SeanRocket.conf
@@ -74,7 +74,7 @@ DOMAIN-SUFFIX,oklink.com,新加坡04 - 标准 EXCLUSIVE
 DOMAIN-SUFFIX,n26.com,德国I-标准 LIGHT
 DOMAIN-SUFFIX,tech26.de,德国I-标准 LIGHT
 
-DOMAIN-SUFFIX,imap.gmail.com,BWG2024
+DOMAIN-SUFFIX,imap.gmail.com,DIRECT
 
 DOMAIN-KEYWORD,safepal,DIRECT
 #
