--- a/SeanRocket.conf
+++ b/SeanRocket.conf
@@ -6,15 +6,25 @@ dns-server = system, 114.114.114.114, 112.124.47.27, 8.8.8.8, 8.8.4.4
 update-url = https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/SeanRocket.conf
 
 [Rule]
-DOMAIN-SUFFIX,bochk.com,DIRECT
+DOMAIN-SUFFIX,bochk.com,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,hsbc.com,香港04-标准 EXCLUSIVE
 
-DOMAIN-SUFFIX,appsflyersdk.com,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,jpush.cn,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,rwbkr.com,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,victorysec.com.hk,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,appsflyersdk.com,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,jpush.cn,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,rwbkr.com,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,victorysec.com.hk,香港04-标准 EXCLUSIVE
 
-DOMAIN-SUFFIX,kraken.com,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,kraken.onl,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,longbridge.cloud,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,longbridge.global,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,longbridge.hk,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,longbridge.sg,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,longbridgeapp.com,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,longportapp.com,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,lbkrs.com,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,wbrks.com,香港04-标准 EXCLUSIVE
+
+DOMAIN-SUFFIX,kraken.com,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,kraken.onl,香港04-标准 EXCLUSIVE
 
 DOMAIN-SUFFIX,binance.cc,德国I-标准 LIGHT
 DOMAIN-SUFFIX,binance.charity,德国I-标准 LIGHT
@@ -64,17 +74,15 @@ DOMAIN-SUFFIX,bybit-global.com,德国I-标准 LIGHT
 DOMAIN-SUFFIX,bybit.cloud,德国I-标准 LIGHT
 DOMAIN-SUFFIX,bybitglobal.com,德国I-标准 LIGHT
 
-DOMAIN-SUFFIX,okex.com,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,okx.com,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,okx-dns.com,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,okx-dns1.com,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,okx-dns2.com,新加坡04 - 标准 EXCLUSIVE
-DOMAIN-SUFFIX,oklink.com,新加坡04 - 标准 EXCLUSIVE
+DOMAIN-SUFFIX,okex.com,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,okx.com,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,okx-dns.com,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,okx-dns1.com,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,okx-dns2.com,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,oklink.com,香港04-标准 EXCLUSIVE
 
 DOMAIN-SUFFIX,n26.com,德国I-标准 LIGHT
 DOMAIN-SUFFIX,tech26.de,德国I-标准 LIGHT
-
-DOMAIN-SUFFIX,imap.gmail.com,DIRECT
 
 DOMAIN-KEYWORD,safepal,DIRECT
 #
