--- a/SeanRocket.conf
+++ b/SeanRocket.conf
@@ -23,41 +23,40 @@ DOMAIN-SUFFIX,longportapp.com,香港04-标准 EXCLUSIVE
 DOMAIN-SUFFIX,lbkrs.com,香港04-标准 EXCLUSIVE
 DOMAIN-SUFFIX,wbrks.com,香港04-标准 EXCLUSIVE
 
-DOMAIN-SUFFIX,kraken.com,香港04-标准 EXCLUSIVE
-DOMAIN-SUFFIX,kraken.onl,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,kraken.com,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,kraken.onl,台湾01-原生 EXCLUSIVE
 
-DOMAIN-SUFFIX,binance.cc,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.charity,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.cloud,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.co,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.com,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.info,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.me,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.net,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.org,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.us,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binance.vision,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancecnt.com,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.be,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.biz,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.cc,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.co,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.com,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.info,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.ink,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.kim,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.link,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.live,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.mobi,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.net,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.pro,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.sh,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binancezh.top,德国I-标准 LIGHT
-DOMAIN-SUFFIX,binanceapi.com,德国I-标准 LIGHT
-DOMAIN-SUFFIX,bnbstatic.com,德国I-标准 LIGHT
-DOMAIN-SUFFIX,saasexch.com,德国I-标准 LIGHT
-DOMAIN-SUFFIX,saasexch.io,德国I-标准 LIGHT
-DOMAIN-SUFFIX,appsflayer.com,德国I-标准 LIGHT
+DOMAIN-SUFFIX,binance.cc,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.charity,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.cloud,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.co,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.com,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.info,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.me,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.net,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.org,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.vision,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancecnt.com,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.be,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.biz,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.cc,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.co,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.com,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.info,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.ink,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.kim,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.link,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.live,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.mobi,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.net,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.pro,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.sh,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.top,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binanceapi.com,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,bnbstatic.com,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,saasexch.com,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,saasexch.io,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,appsflayer.com,台湾01-原生 EXCLUSIVE
 
 DOMAIN-SUFFIX,bybit.com,德国I-标准 LIGHT
 DOMAIN-SUFFIX,bycsi.com,德国I-标准 LIGHT
@@ -74,12 +73,12 @@ DOMAIN-SUFFIX,bybit-global.com,德国I-标准 LIGHT
 DOMAIN-SUFFIX,bybit.cloud,德国I-标准 LIGHT
 DOMAIN-SUFFIX,bybitglobal.com,德国I-标准 LIGHT
 
-DOMAIN-SUFFIX,okex.com,香港04-标准 EXCLUSIVE
-DOMAIN-SUFFIX,okx.com,香港04-标准 EXCLUSIVE
-DOMAIN-SUFFIX,okx-dns.com,香港04-标准 EXCLUSIVE
-DOMAIN-SUFFIX,okx-dns1.com,香港04-标准 EXCLUSIVE
-DOMAIN-SUFFIX,okx-dns2.com,香港04-标准 EXCLUSIVE
-DOMAIN-SUFFIX,oklink.com,香港04-标准 EXCLUSIVE
+DOMAIN-SUFFIX,okex.com,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,okx.com,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,okx-dns.com,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,okx-dns1.com,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,okx-dns2.com,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,oklink.com,台湾01-原生 EXCLUSIVE
 
 DOMAIN-SUFFIX,n26.com,德国I-标准 LIGHT
 DOMAIN-SUFFIX,tech26.de,德国I-标准 LIGHT
