--- a/SeanRocket.conf
+++ b/SeanRocket.conf
@@ -27,36 +27,36 @@ DOMAIN-SUFFIX,kraken.com,台湾01 - 原生 EXCLUSIVE
 DOMAIN-SUFFIX,kraken.onl,台湾01 - 原生 EXCLUSIVE
 
 DOMAIN-SUFFIX,binance.cc,台湾01 - 原生 EXCLUSIVE
-DOMAIN-SUFFIX,binance.charity,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binance.cloud,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binance.co,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binance.com,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binance.info,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binance.me,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binance.net,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binance.org,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binance.vision,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binancecnt.com,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.be,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.biz,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.cc,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.co,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.com,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.info,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.ink,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.kim,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.link,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.live,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.mobi,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.net,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.pro,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.sh,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binancezh.top,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,binanceapi.com,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,bnbstatic.com,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,saasexch.com,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,saasexch.io,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,appsflayer.com,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.charity,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.cloud,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.co,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.com,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.info,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.me,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.net,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.org,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binance.vision,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancecnt.com,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.be,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.biz,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.cc,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.co,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.com,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.info,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.ink,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.kim,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.link,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.live,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.mobi,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.net,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.pro,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.sh,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binancezh.top,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,binanceapi.com,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,bnbstatic.com,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,saasexch.com,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,saasexch.io,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,appsflayer.com,台湾01 - 原生 EXCLUSIVE
 
 DOMAIN-SUFFIX,bybit.com,德国I-标准 LIGHT
 DOMAIN-SUFFIX,bycsi.com,德国I-标准 LIGHT
@@ -73,18 +73,18 @@ DOMAIN-SUFFIX,bybit-global.com,德国I-标准 LIGHT
 DOMAIN-SUFFIX,bybit.cloud,德国I-标准 LIGHT
 DOMAIN-SUFFIX,bybitglobal.com,德国I-标准 LIGHT
 
-DOMAIN-SUFFIX,okex.com,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,okx.com,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,okx-dns.com,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,okx-dns1.com,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,okx-dns2.com,台湾01-原生 EXCLUSIVE
-DOMAIN-SUFFIX,oklink.com,台湾01-原生 EXCLUSIVE
+DOMAIN-SUFFIX,okex.com,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,okx.com,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,okx-dns.com,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,okx-dns1.com,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,okx-dns2.com,台湾01 - 原生 EXCLUSIVE
+DOMAIN-SUFFIX,oklink.com,台湾01 - 原生 EXCLUSIVE
 
 DOMAIN-SUFFIX,n26.com,德国I-标准 LIGHT
 DOMAIN-SUFFIX,tech26.de,德国I-标准 LIGHT
 
 DOMAIN-KEYWORD,safepal,DIRECT
-#
+# DOMAIN-SUFFIX,OCBC.com,新加坡03 - 原生 EXCLUSIVE
 # 国内外划分，对中国网站直连，外国网站代理。
 #
 # 不包含广告过滤
