--- a/SeanRocket.conf
+++ b/SeanRocket.conf
@@ -101,3 +101,6 @@ FINAL,PROXY
 
 [URL Rewrite]
 ^http://(www.)?google.cn https://www.google.com 302
+
+[App]
+com.google.ios.youtube = 台湾 01 - 原生 Exclusive
