--- a/Proxy Group.conf
+++ b/Proxy Group.conf
@@ -52,6 +52,7 @@ dns-direct-fallback-proxy = true
 🇬🇧 英国节点 = url-test, tolerance = 50, policy-regex-filter = (🇬🇧)|(英)|(Kingdom)|(UK) 
 🇲🇾 马来节点 = url-test, tolerance = 50, policy-regex-filter = (🇲🇾)|(马)|(Malaysia)|(MA) 
 🇺🇳 小众节点 = url-test, tolerance = 50, policy-regex-filter = (喀麦隆)|(冰岛)|(土耳其)|(阿根廷) 
+DE 德国节点 = url-test, tolerance = 50, policy-regex-filter = (DE)|(德国)
 # >> 多地域组合
 🗺️ Non-HK = url-test, tolerance = 50, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
 🌏 Asia = url-test, tolerance = 50, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇲🇾 马来节点 
@@ -105,7 +106,7 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/
 # >> Crypto
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Shadowrocket/Binance/Binance.list, 🇼🇸 台湾节点, update-interval = 86400
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Shadowrocket/OKX/OKX.list, 🇼🇸 台湾节点, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/Bybit.list, 🇺🇳 小众节点, update-interval = 86400
+RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/Bybit.list, DE 德国节点, update-interval = 86400
 RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/HKbank.list, 🇭🇰 香港节点, update-interval = 86400
 RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/hsbc.list, 🇭🇰 香港节点, update-interval = 86400
 
