--- a/Proxy Group.conf
+++ b/Proxy Group.conf
@@ -19,13 +19,13 @@ dns-direct-fallback-proxy = true
 ♻️ 自动选择 = url-test, tolerance = 50, policy-regex-filter = .
 # >> 手动选择 
 🚀 手动切换 = select, policy-regex-filter = .
-🚀 节点选择 = select, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DIRECT 
+🚀 节点选择 = select, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点, DIRECT 
 # >> 分流策略 
-📲 电报消息 = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
-💬 OpenAI = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
+📲 电报消息 = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点 
+💬 OpenAI = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点
 # >> 流媒体策略 
-📹 油管视频 = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
-🎥 奈飞视频 = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
+📹 油管视频 = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点
+🎥 奈飞视频 = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点
 📺 巴哈姆特 = select, 🇼🇸 台湾节点, 🚀 节点选择, 🚀 手动切换 
 📺 哔哩哔哩 = select, 🎯 全球直连, 🇼🇸 台湾节点, 🇭🇰 香港节点 
 🎶 网易音乐 = select, DIRECT, 🚀 节点选择, ♻️ 自动选择 
@@ -54,9 +54,9 @@ dns-direct-fallback-proxy = true
 🇺🇳 小众节点 = url-test, tolerance = 50, policy-regex-filter = (喀麦隆)|(冰岛)|(土耳其)|(阿根廷) 
 DE 德国节点 = url-test, tolerance = 50, policy-regex-filter = (DE)|(德国)
 # >> 多地域组合
-🗺️ Non-HK = url-test, tolerance = 50, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
+🗺️ Non-HK = url-test, tolerance = 50, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点 
 🌏 Asia = url-test, tolerance = 50, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇲🇾 马来节点 
-🌎 Western = url-test, tolerance = 50, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇺🇳 小众节点
+🌎 Western = url-test, tolerance = 50, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇺🇳 小众节点, DE 德国节点 
 
 [Rule]
 # >> 广告规则
