--- a/Proxy Group.conf
+++ b/Proxy Group.conf
@@ -111,7 +111,7 @@ RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/l
 RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/hsbc.list, 🇭🇰 香港节点, update-interval = 86400
 
 # >> Other
-DOMAIN-KEYWORD,bitget,台湾01 - 原生 EXCLUSIVE
+DOMAIN-KEYWORD,bitget, 🇼🇸 台湾节点, update-interval = 86400
 
 # >> 代理规则
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list, 🚀 节点选择, update-interval = 86400
