--- a/Proxy Group.conf
+++ b/Proxy Group.conf
@@ -21,18 +21,16 @@ dns-direct-fallback-proxy = true
 🚀 手动切换 = select, policy-regex-filter = .
 🚀 节点选择 = select, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点, DIRECT 
 # >> 分流策略 
-📲 电报消息 = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点 
-💬 OpenAI = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点
+#📲 电报消息 = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点 
+#💬 OpenAI = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点
 # >> 流媒体策略 
-📹 油管视频 = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点
+#📹 油管视频 = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点
 🎥 奈飞视频 = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点
-📺 巴哈姆特 = select, 🇼🇸 台湾节点, 🚀 节点选择, 🚀 手动切换 
-📺 哔哩哔哩 = select, 🎯 全球直连, 🇼🇸 台湾节点, 🇭🇰 香港节点 
-🎶 网易音乐 = select, DIRECT, 🚀 节点选择, ♻️ 自动选择 
-🌍 国外媒体 = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
-🌏 国内媒体 = select, DIRECT, 🇭🇰 香港节点, 🇼🇸 台湾节点 
+#📺 巴哈姆特 = select, 🇼🇸 台湾节点, 🚀 节点选择, 🚀 手动切换 
+#🌍 国外媒体 = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
+#🌏 国内媒体 = select, DIRECT, 🇭🇰 香港节点, 🇼🇸 台湾节点 
 # >> 服务策略 
-📢 谷歌FCM = select, DIRECT, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
+#📢 谷歌FCM = select, DIRECT, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
 Ⓜ️ 微软云盘 = select, DIRECT, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
 Ⓜ️ 微软服务 = select, DIRECT, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
 🍎 苹果服务 = select, DIRECT, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
