--- a/Proxy Group.conf
+++ b/Proxy Group.conf
@@ -69,35 +69,35 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list, 🎯 全球直连, update-interval = 86400
 
 # >> 地域规则
-OR, ((DOMAIN-SUFFIX, jetbrains.com), (DOMAIN-SUFFIX, ugreengroup.com), (DOMAIN-SUFFIX, msftconnecttest.com), (DOMAIN-SUFFIX, appstorrent.ru), (DOMAIN-SUFFIX, zerotier.com), (DOMAIN-SUFFIX, imgse.com)), 🎯 全球直连
-OR, ((DOMAIN-KEYWORD, google), (DOMAIN-SUFFIX, meta.ai), (DOMAIN-SUFFIX, instagram.com), (DOMAIN-SUFFIX, claude.ai), (DOMAIN-SUFFIX, anthropic.com), (DOMAIN-SUFFIX, vfsglobal.com), (DOMAIN-SUFFIX, ca), (DOMAIN-SUFFIX, docker.com)), 🇺🇲 美国节点
-OR, ((DOMAIN-SUFFIX, itoolab.com), (DOMAIN-SUFFIX, itoolab.net), (DOMAIN-SUFFIX, ip-api.com)), ♻️ 自动选择
-RULE-SET, https://whatshub.top/rule/Binance.list, 🇸🇬 狮城节点, update-interval = 86400
-DOMAIN-SUFFIX, copilot.microsoft.com, 🗺️ Non-HK
+#OR, ((DOMAIN-SUFFIX, jetbrains.com), (DOMAIN-SUFFIX, ugreengroup.com), (DOMAIN-SUFFIX, msftconnecttest.com), (DOMAIN-SUFFIX, appstorrent.ru), (DOMAIN-SUFFIX, zerotier.com), (DOMAIN-SUFFIX, imgse.com)), 🎯 全球直连
+#OR, ((DOMAIN-KEYWORD, google), (DOMAIN-SUFFIX, meta.ai), (DOMAIN-SUFFIX, instagram.com), (DOMAIN-SUFFIX, claude.ai), (DOMAIN-SUFFIX, anthropic.com), (DOMAIN-SUFFIX, vfsglobal.com), (DOMAIN-SUFFIX, ca), (DOMAIN-SUFFIX, docker.com)), 🇺🇲 美国节点
+#OR, ((DOMAIN-SUFFIX, itoolab.com), (DOMAIN-SUFFIX, itoolab.net), (DOMAIN-SUFFIX, ip-api.com)), ♻️ 自动选择
+#RULE-SET, https://whatshub.top/rule/Binance.list, 🇸🇬 狮城节点, update-interval = 86400
+#DOMAIN-SUFFIX, copilot.microsoft.com, 🗺️ Non-HK
 
 # >> 应用规则
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list, 📢 谷歌FCM, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list, 🎯 全球直连, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list, 🎯 全球直连, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list, 📢 谷歌FCM, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list, 🎯 全球直连, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list, 🎯 全球直连, update-interval = 86400
 # >> 微软/苹果
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list, Ⓜ️ 微软云盘, update-interval = 86400
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list, Ⓜ️ 微软服务, update-interval = 86400
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list, 🍎 苹果服务, update-interval = 86400
 # >> 社交媒体
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list, 📲 电报消息, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list, 💬 OpenAI, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list, 📲 电报消息, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list, 💬 OpenAI, update-interval = 86400
 # >> 流媒体音视频
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list, 🎶 网易音乐, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list, 🎶 网易音乐, update-interval = 86400
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list, 📹 油管视频, update-interval = 86400
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list, 🎥 奈飞视频, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list, 📺 巴哈姆特, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list, 📺 哔哩哔哩, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list, 📺 哔哩哔哩, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list, 🌏 国内媒体, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list, 🌍 国外媒体, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list, 📺 巴哈姆特, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list, 📺 哔哩哔哩, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list, 📺 哔哩哔哩, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list, 🌏 国内媒体, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list, 🌍 国外媒体, update-interval = 86400
 # >> 游戏平台
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list, 🎮 游戏平台, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list, 🎮 游戏平台, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list, 🎮 游戏平台, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list, 🎮 游戏平台, update-interval = 86400
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list, 🎮 游戏平台, update-interval = 86400
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list, 🎮 游戏平台, update-interval = 86400
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list, 🎮 游戏平台, update-interval = 86400
