--- a/Proxy Group.conf
+++ b/Proxy Group.conf
@@ -80,15 +80,15 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.li
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list, 🎯 全球直连, update-interval = 86400
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list, 🎯 全球直连, update-interval = 86400
 # >> 微软/苹果
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list, Ⓜ️ 微软云盘, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list, Ⓜ️ 微软服务, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list, 🍎 苹果服务, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list, Ⓜ️ 微软云盘, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list, Ⓜ️ 微软服务, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list, 🍎 苹果服务, update-interval = 86400
 # >> 社交媒体
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list, 📲 电报消息, update-interval = 86400
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list, 💬 OpenAI, update-interval = 86400
 # >> 流媒体音视频
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list, 🎶 网易音乐, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list, 📹 油管视频, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list, 📹 油管视频, update-interval = 86400
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list, 🎥 奈飞视频, update-interval = 86400
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list, 📺 巴哈姆特, update-interval = 86400
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list, 📺 哔哩哔哩, update-interval = 86400
