--- a/Proxy Group.conf
+++ b/Proxy Group.conf
@@ -31,15 +31,15 @@ dns-direct-fallback-proxy = true
 #🌏 国内媒体 = select, DIRECT, 🇭🇰 香港节点, 🇼🇸 台湾节点 
 # >> 服务策略 
 #📢 谷歌FCM = select, DIRECT, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
-Ⓜ️ 微软云盘 = select, DIRECT, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
-Ⓜ️ 微软服务 = select, DIRECT, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
-🍎 苹果服务 = select, DIRECT, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
-🎮 游戏平台 = select, DIRECT, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
+#Ⓜ️ 微软云盘 = select, DIRECT, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
+#Ⓜ️ 微软服务 = select, DIRECT, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
+#🍎 苹果服务 = select, DIRECT, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
+#🎮 游戏平台 = select, DIRECT, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
 # >> 基础策略 
-🎯 全球直连 = select, DIRECT, 🚀 节点选择, ♻️ 自动选择 
+🎯 全球直连 = select, DIRECT,
 🛑 广告拦截 = select, REJECT, DIRECT 
 🍃 应用净化 = select, REJECT, DIRECT 
-🐟 漏网之鱼 = select, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DIRECT 
+🐟 漏网之鱼 = select, 🚀 手动切换
 
 # > 地域分组
 🇭🇰 香港节点 = url-test, tolerance = 50, policy-regex-filter = (🇭🇰)|(港)|(Hong)|(HK) 
