--- a/Proxy Group.conf
+++ b/Proxy Group.conf
@@ -57,16 +57,16 @@ DE 德国节点 = url-test, tolerance = 50, policy-regex-filter = (DE)|(德国)
 🌎 Western = url-test, tolerance = 50, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇺🇳 小众节点, DE 德国节点 
 
 [Rule]
-# >> 广告规则
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list, 🛑 广告拦截, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list, 🍃 应用净化, update-interval = 86400
+# >> 广告规则# >> 广告规则
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list, 🛑 广告拦截, update-interval = 86400#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list, 🛑 广告拦截, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list, 🍃 应用净化, update-interval = 86400#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list, 🍃 应用净化, update-interval = 86400
 
 # >> 基础规则集
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list, 🎯 全球直连, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, 🎯 全球直连, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list, 🎯 全球直连, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list, 🎯 全球直连, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list, 🎯 全球直连, update-interval = 86400
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, 🎯 全球直连, update-interval = 86400RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, 🎯 全球直连, update-interval = 86400RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, 🎯 全球直连, update-interval = 86400RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, 🎯 全球直连, update-interval = 86400
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list, 🎯 全球直连, update-interval = 86400#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list, 🎯 全球直连, update-interval = 86400
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list, 🎯 全球直连, update-interval = 86400#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list, 🎯 全球直连, update-interval = 86400
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list, 🎯 全球直连, update-interval = 86400#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list, 🎯 全球直连, update-interval = 86400
 
 # >> 地域规则
 #OR, ((DOMAIN-SUFFIX, jetbrains.com), (DOMAIN-SUFFIX, ugreengroup.com), (DOMAIN-SUFFIX, msftconnecttest.com), (DOMAIN-SUFFIX, appstorrent.ru), (DOMAIN-SUFFIX, zerotier.com), (DOMAIN-SUFFIX, imgse.com)), 🎯 全球直连
@@ -98,11 +98,11 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/
 # >> 游戏平台
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list, 🎮 游戏平台, update-interval = 86400
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list, 🎮 游戏平台, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list, 🎮 游戏平台, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list, 🎮 游戏平台, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list, 🎮 游戏平台, update-interval = 86400
-# >> Finance
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Shadowrocket/Binance/Binance.list, 🇼🇸 台湾节点, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list, 🎮 游戏平台, update-interval = 86400RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list, 🎮 游戏平台, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list, 🎮 游戏平台, update-interval = 86400#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list, 🎮 游戏平台, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list, 🎮 游戏平台, update-interval = 86400
+# >> Finance# >> Finance
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Shadowrocket/Binance/Binance.list, 🇼🇸 台湾节点, update-interval = 86400RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Shadowrocket/Binance/Binance.list, 🇼🇸 台湾节点, update-interval = 86400
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Shadowrocket/OKX/OKX.list, 🇼🇸 台湾节点, update-interval = 86400
 RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/BybitN26.list, DE 德国节点, update-interval = 86400
 RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/HKbank.list, 🇭🇰 香港节点, update-interval = 86400
