--- a/Proxy Group.conf
+++ b/Proxy Group.conf
@@ -118,7 +118,7 @@ DOMAIN-KEYWORD,bitget, 🇼🇸 台湾节点, update-interval = 86400
 # > GeoIP China
 GEOIP,CN, 🎯 全球直连,no-resolve
 # > 兜底规则
-FINAL, 🐟 漏网之鱼
+FINAL, PROXY
 
 [Host]
 localhost = 127.0.0.1
