--- a/Proxy Group.conf
+++ b/Proxy Group.conf
@@ -25,7 +25,7 @@ dns-direct-fallback-proxy = true
 #💬 OpenAI = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点
 # >> 流媒体策略 
 #📹 油管视频 = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点
-🎥 奈飞视频 = 🇺🇲 美国节点
+🎥 奈飞视频 = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点
 #📺 巴哈姆特 = select, 🇼🇸 台湾节点, 🚀 节点选择, 🚀 手动切换 
 #🌍 国外媒体 = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
 #🌏 国内媒体 = select, DIRECT, 🇭🇰 香港节点, 🇼🇸 台湾节点 
@@ -89,7 +89,7 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.li
 # >> 流媒体音视频
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list, 🎶 网易音乐, update-interval = 86400
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list, 📹 油管视频, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list, 🎥 奈飞视频, update-interval = 86400
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list, 🇺🇲 美国节点, update-interval = 86400
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list, 📺 巴哈姆特, update-interval = 86400
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list, 📺 哔哩哔哩, update-interval = 86400
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list, 📺 哔哩哔哩, update-interval = 86400
