--- a/Proxy Group.conf
+++ b/Proxy Group.conf
@@ -89,7 +89,7 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.li
 # >> 流媒体音视频
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list, 🎶 网易音乐, update-interval = 86400
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list, 📹 油管视频, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list, 🇺🇲 美国节点, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list, 🇺🇲 美国节点, update-interval = 86400
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list, 📺 巴哈姆特, update-interval = 86400
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list, 📺 哔哩哔哩, update-interval = 86400
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list, 📺 哔哩哔哩, update-interval = 86400
@@ -111,6 +111,7 @@ RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/l
 # >> Other# >> Other
 RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/Direct.list, 🎯 全球直连, update-interval = 86400
 DOMAIN-KEYWORD,bitget, 🇼🇸 台湾节点, update-interval = 86400
+DOMAIN-SUFFIX,imap.gmail.com, 🇺🇲 美国节点, update-interval = 86400
 
 # >> 代理规则
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list, 🚀 节点选择, update-interval = 86400
