--- a/Proxy Group.conf
+++ b/Proxy Group.conf
@@ -43,7 +43,8 @@ dns-direct-fallback-proxy = true
 
 # > 地域分组
 🇭🇰 香港节点 = url-test, tolerance = 50, policy-regex-filter = (🇭🇰)|(港)|(Hong)|(HK) 
-🇼🇸 台湾节点 = url-test, tolerance = 50, policy-regex-filter = (🇼🇸)|(台)|(Tai)|(TW) 
+# 🇼🇸 台湾节点 = url-test, tolerance = 50, policy-regex-filter = (🇼🇸)|(台)|(Tai)|(TW) 
+🇼🇸 台湾节点 = url-test, tolerance = 50, policy-regex-filter = (🇼🇸)|(台湾01)|(台湾02)|(台湾03)|(台湾A)|(台湾B)|(台湾C)|(台湾D)|(台湾E)
 🇯🇵 日本节点 = url-test, tolerance = 50, policy-regex-filter = (🇯🇵)|(日)|(Japan)|(JP) 
 🇸🇬 狮城节点 = url-test, tolerance = 50, policy-regex-filter = (🇸🇬)|(新)|(Singapore)|(SG) 
 🇺🇲 美国节点 = url-test, tolerance = 50, policy-regex-filter = (🇺🇸)|(美)|(States)|(US) 
