--- a/Proxy Group.conf
+++ b/Proxy Group.conf
@@ -105,7 +105,7 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.li
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Shadowrocket/Binance/Binance.list, 🇼🇸 台湾节点, update-interval = 86400
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Shadowrocket/OKX/OKX.list, 🇼🇸 台湾节点, update-interval = 86400
 RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/BybitN26.list, DE 德国节点, update-interval = 86400
-# RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/HKbank.list, 🇭🇰 香港节点, update-interval = 86400
+RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/HKbank.list, 🇭🇰 香港节点, update-interval = 86400
 RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/hsbc.list, 🎯 全球直连, update-interval = 86400
 
 # >> Other# >> Other
