--- a/Proxy Group.conf
+++ b/Proxy Group.conf
@@ -18,8 +18,8 @@ dns-direct-fallback-proxy = true
 # >> 自动测速
 ♻️ 自动选择 = url-test, tolerance = 50, policy-regex-filter = .
 # >> 手动选择 
-🚀 手动切换 = select, policy-regex-filter = .
-🚀 节点选择 = select, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点, DIRECT 
+#🚀 手动切换 = select, policy-regex-filter = .
+#🚀 节点选择 = select, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点, DIRECT 
 # >> 分流策略 
 #📲 电报消息 = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点 
 #💬 OpenAI = select, ♻️ 自动选择, 🚀 手动切换, 🚀 节点选择, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点
@@ -37,9 +37,9 @@ dns-direct-fallback-proxy = true
 #🎮 游戏平台 = select, DIRECT, ♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点 
 # >> 基础策略 
 🎯 全球直连 = select, DIRECT,
-🛑 广告拦截 = select, REJECT, DIRECT 
-🍃 应用净化 = select, REJECT, DIRECT 
-🐟 漏网之鱼 = select, 🚀 手动切换
+#🛑 广告拦截 = select, REJECT, DIRECT 
+#🍃 应用净化 = select, REJECT, DIRECT 
+#🐟 漏网之鱼 = select, 🚀 手动切换
 
 # > 地域分组
 🇭🇰 香港节点 = url-test, tolerance = 50, policy-regex-filter = (🇭🇰)|(港)|(Hong)|(HK) 
@@ -52,9 +52,9 @@ dns-direct-fallback-proxy = true
 🇺🇳 小众节点 = url-test, tolerance = 50, policy-regex-filter = (喀麦隆)|(冰岛)|(土耳其)|(阿根廷) 
 DE 德国节点 = url-test, tolerance = 50, policy-regex-filter = (DE)|(德国)
 # >> 多地域组合
-🗺️ Non-HK = url-test, tolerance = 50, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点 
-🌏 Asia = url-test, tolerance = 50, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇲🇾 马来节点 
-🌎 Western = url-test, tolerance = 50, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇺🇳 小众节点, DE 德国节点 
+#🗺️ Non-HK = url-test, tolerance = 50, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇲🇾 马来节点, 🇺🇳 小众节点, DE 德国节点 
+#🌏 Asia = url-test, tolerance = 50, 🇭🇰 香港节点, 🇼🇸 台湾节点, 🇯🇵 日本节点, 🇸🇬 狮城节点, 🇲🇾 马来节点 
+#🌎 Western = url-test, tolerance = 50, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇺🇳 小众节点, DE 德国节点 
 
 [Rule]
 # >> 广告规则# >> 广告规则
