Uncomment rule sets and geoip for configuration

--- a/Proxy Group.conf
+++ b/Proxy Group.conf
@@ -103,10 +103,10 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.li
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list, 🎮 游戏平台, update-interval = 86400
 # >> Finance# >> Finance
 #RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Shadowrocket/Binance/Binance.list, 🇼🇸 台湾节点, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Shadowrocket/OKX/OKX.list, 🇼🇸 台湾节点, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/BybitN26.list, DE 德国节点, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/HKbank.list, 🇭🇰 香港节点, update-interval = 86400
-RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/hsbc.list, 🎯 全球直连, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Shadowrocket/OKX/OKX.list, 🇼🇸 台湾节点, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/BybitN26.list, DE 德国节点, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/HKbank.list, 🇭🇰 香港节点, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/hsbc.list, 🎯 全球直连, update-interval = 86400
 
 # >> Other# >> Other
 RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/Direct.list, 🎯 全球直连, update-interval = 86400
@@ -117,9 +117,9 @@ DOMAIN-SUFFIX,imap.gmail.com, 🇺🇲 美国节点, update-interval = 86400
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list, 🚀 节点选择, update-interval = 86400
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list, 🎯 全球直连, update-interval = 86400
 # > GeoIP China
-#GEOIP,CN, 🎯 全球直连,no-resolve
+GEOIP,CN, 🎯 全球直连,no-resolve
 # > 兜底规则
-#FINAL, PROXY
+FINAL, PROXY
 
 [Host]
 localhost = 127.0.0.1
